--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,7 @@
       <section class="top-bar-section">
         <ul class="right">
           <li><a href="/">Accueil</a></li>
+          <li><%= link_to 'Equipe', users_path %></li>
         </ul>
       </section>
     </nav>
