--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
     <nav class="top-bar" data-topbar role="navigation">
       <ul class="title-area">
         <li class="name">
-          <h1><a href="#">MMI Bordeaux</a></h1>
+          <h1><%= link_to 'MMI Bordeaux', root_path %></h1>
         </li>
          <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
         <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
@@ -21,7 +21,6 @@
 
       <section class="top-bar-section">
         <ul class="right">
-          <li><a href="/">Accueil</a></li>
           <li><%= link_to 'Equipe', users_path %></li>
         </ul>
       </section>
