--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,6 +29,7 @@
               <li><%= link_to 'Sujets', teaching_subjects_path %></li>
               <li><%= link_to 'Catégories', teaching_categories_path %></li>
               <li><%= link_to 'Modules', teaching_modules_path %></li>
+              <li><%= link_to 'Objectifs', objectives_path %></li>
               <li><%= link_to 'Compétences', competencies_path %></li>
               <li><%= link_to 'Mots-clés', keywords_path %></li>
             </ul>
