--- a/app/views/semesters/index.html.erb
+++ b/app/views/semesters/index.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Semestres</h1>
+<h1><%= @semesters.count %> semestres</h1>
 
 <table>
   <thead>
@@ -13,15 +13,10 @@
   <tbody>
     <% @semesters.each do |semester| %>
       <tr>
-        <td><%= semester.number %></td>
+        <td><%= link_to semester, semester %></td>
         <td><%= link_to 'Show', semester %></td>
         <td><%= link_to 'Edit', edit_semester_path(semester) %></td>
-        <td><%= link_to 'Destroy', semester, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
-
-<br>
-
-<%= link_to 'New Semester', new_semester_path %>
