--- a/app/views/teaching_subjects/index.html.erb
+++ b/app/views/teaching_subjects/index.html.erb
@@ -1,13 +1,13 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Sujets</h1>
+<h1><%= @teaching_subjects.count %> sujets</h1>
 
 <table>
   <thead>
     <tr>
       <th>Label</th>
       <th>UE</th>
-      <th colspan="3"></th>
+      <th colspan="2"></th>
     </tr>
   </thead>
 
@@ -18,12 +18,7 @@
         <td><%= link_to teaching_subject.teaching_unit, teaching_unit_path(teaching_subject.teaching_unit) %></td>
         <td><%= link_to 'Show', teaching_subject %></td>
         <td><%= link_to 'Edit', edit_teaching_subject_path(teaching_subject) %></td>
-        <td><%= link_to 'Destroy', teaching_subject, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
-
-<br>
-
-<%= link_to 'New Teaching subject', new_teaching_subject_path %>
