--- a/app/views/teaching_units/index.html.erb
+++ b/app/views/teaching_units/index.html.erb
@@ -1,12 +1,12 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Unités d'enseignement</h1>
+<h1><%= @teaching_units.count %> unités d'enseignement</h1>
 
 <table>
   <thead>
     <tr>
       <th>Number</th>
-      <th colspan="3"></th>
+      <th colspan="2"></th>
     </tr>
   </thead>
 
@@ -16,12 +16,7 @@
         <td><%= teaching_unit %></td>
         <td><%= link_to 'Show', teaching_unit %></td>
         <td><%= link_to 'Edit', edit_teaching_unit_path(teaching_unit) %></td>
-        <td><%= link_to 'Destroy', teaching_unit, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
-
-<br>
-
-<%= link_to 'New Teaching unit', new_teaching_unit_path %>
