bootstrap, projects, fields

--- a/app/views/keywords/index.html.erb
+++ b/app/views/keywords/index.html.erb
@@ -2,28 +2,20 @@
 
 <h1><%= @keywords.count %> mots-clés</h1>
 
-<table>
+<table class="table table-hover">
   <thead>
     <tr>
       <th>Label</th>
       <th>Teaching module</th>
-      <th colspan="3"></th>
     </tr>
   </thead>
 
   <tbody>
     <% @keywords.each do |keyword| %>
       <tr>
-        <td><%= keyword.label %></td>
-        <td><%= keyword.teaching_module_id %></td>
-        <td><%= link_to 'Show', keyword %></td>
-        <td><%= link_to 'Edit', edit_keyword_path(keyword) %></td>
-        <td><%= link_to 'Destroy', keyword, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to keyword, keyword %></td>
+        <td><%= link_to keyword.teaching_module.full_name, keyword.teaching_module %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
-
-<br>
-
-<%= link_to 'New Keyword', new_keyword_path %>
