--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,46 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%= content_for?(:title) ? yield(:title) : "MMI Bordeaux" %></title>
-    <%= stylesheet_link_tag    "application" %>
-    <%= javascript_include_tag "vendor/modernizr" %>
-    <%= javascript_include_tag "application" %>
     <%= csrf_meta_tags %>
+
+    <%= stylesheet_link_tag "application", :media => "all" %>
+
+    <!-- For third-generation iPad with high-resolution Retina display: -->
+    <!-- Size should be 144 x 144 pixels -->
+    <%= favicon_link_tag 'apple-touch-icon-144x144-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png', :sizes => '144x144' %>
+
+    <!-- For iPhone with high-resolution Retina display: -->
+    <!-- Size should be 114 x 114 pixels -->
+    <%= favicon_link_tag 'apple-touch-icon-114x114-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png', :sizes => '114x114' %>
+
+    <!-- For first- and second-generation iPad: -->
+    <!-- Size should be 72 x 72 pixels -->
+    <%= favicon_link_tag 'apple-touch-icon-72x72-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png', :sizes => '72x72' %>
+
+    <!-- For non-Retina iPhone, iPod Touch, and Android 2.1+ devices: -->
+    <!-- Size should be 57 x 57 pixels -->
+    <%= favicon_link_tag 'apple-touch-icon-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png' %>
+
+    <!-- For all other devices -->
+    <!-- Size should be 32 x 32 pixels -->
+    <%= favicon_link_tag 'favicon.ico', :rel => 'shortcut icon' %>
+
+    <%= javascript_include_tag "application" %>
   </head>
   <body>
-    <nav class="top-bar" data-topbar role="navigation">
-      <ul class="title-area">
-        <li class="name">
-          <h1><%= link_to 'MMI Bordeaux', root_path %></h1>
-        </li>
-        <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
-      </ul>
 
-      <section class="top-bar-section">
-        <ul class="right">
-          <li><%= link_to 'Equipe', users_path %></li>
-          <li class="has-dropdown">
-            <a href="#">PPN</a>
-            <ul class="dropdown">
-              <li><%= link_to 'Semestres', semesters_path %></li>
-              <li><%= link_to 'Unités d\'enseignement', teaching_units_path %></li>
-              <li><%= link_to 'Sujets', teaching_subjects_path %></li>
-              <li><%= link_to 'Catégories', teaching_categories_path %></li>
-              <li><%= link_to 'Modules', teaching_modules_path %></li>
-              <li><%= link_to 'Objectifs', objectives_path %></li>
-              <li><%= link_to 'Compétences', competencies_path %></li>
-              <li><%= link_to 'Mots-clés', keywords_path %></li>
-            </ul>
-          </li>
-        </ul>
-      </section>
-    </nav>
+    <div class="navbar navbar-default navbar-fixed-top">
+      <div class="container">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#">MMI Bordeaux</a>
+        <div class="navbar-collapse collapse navbar-responsive-collapse">
+          <ul class="nav navbar-nav navbar-right">
+            <li><%= link_to 'Equipe', users_path %></li>
+            <li><%= link_to 'Champs', fields_path %></li>
+            <li><%= link_to 'Projets', projects_path %></li>            
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">PPN <span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                <li><%= link_to 'Semestres', semesters_path %></li>
+                <li><%= link_to 'Unités d\'enseignement', teaching_units_path %></li>
+                <li><%= link_to 'Sujets', teaching_subjects_path %></li>
+                <li><%= link_to 'Catégories', teaching_categories_path %></li>
+                <li><%= link_to 'Modules', teaching_modules_path %></li>
+                <li><%= link_to 'Objectifs', objectives_path %></li>
+                <li><%= link_to 'Compétences', competencies_path %></li>
+                <li><%= link_to 'Mots-clés', keywords_path %></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
 
-    <main role="main" class="row">
-      <%= yield %>
-    </main>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12">
+          <%= bootstrap_flash %>
+          <%= yield %>
+        </div>
+      </div>
+    </div>
 
   </body>
 </html>
