--- a/app/views/teaching_categories/index.html.erb
+++ b/app/views/teaching_categories/index.html.erb
@@ -2,7 +2,7 @@
 
 <h1><%= @teaching_categories.count %> catégories</h1>
 
-<table>
+<table class="table table-hover">
   <thead>
     <tr>
       <th>Label</th>
