--- a/app/views/teaching_modules/index.html.erb
+++ b/app/views/teaching_modules/index.html.erb
@@ -2,7 +2,7 @@
 
 <h1><%= @teaching_modules.count %> modules</h1>
 
-<table>
+<table class="table table-hover">
   <thead>
     <tr>
       <th>Code</th>
