formtastic, in fact

--- a/app/views/semesters/_form.html.erb
+++ b/app/views/semesters/_form.html.erb
@@ -1,21 +1,4 @@
-<%= form_for(@semester) do |f| %>
-  <% if @semester.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@semester.errors.count, "error") %> prohibited this semester from being saved:</h2>
-
-      <ul>
-      <% @semester.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :number %><br>
-    <%= f.number_field :number %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+<%= simple_form_for @semester do |f| %>
+  <%= f.input :number %>
+  <%= f.button :submit %>
 <% end %>
