--- a/app/views/competencies/_form.html.erb
+++ b/app/views/competencies/_form.html.erb
@@ -1,25 +1,7 @@
-<%= form_for(@competency) do |f| %>
-  <% if @competency.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@competency.errors.count, "error") %> prohibited this competency from being saved:</h2>
-
-      <ul>
-      <% @competency.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
+<%= semantic_form_for @competency do |f| %>
+  <%= f.inputs do %>
+    <%= f.input :label, as: :text, input_html: {rows: 3} %>
+    <%= f.input :teaching_module %>
   <% end %>
-
-  <div class="field">
-    <%= f.label :label %><br>
-    <%= f.text_field :label %>
-  </div>
-  <div class="field">
-    <%= f.label :teaching_module_id %><br>
-    <%= f.number_field :teaching_module_id %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+  <%= f.actions %>
 <% end %>
