--- a/app/views/fields/index.html.erb
+++ b/app/views/fields/index.html.erb
@@ -1,29 +1,20 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Fields</h1>
+<h1><%= @fields.count %> champs</h1>
+<%= link_to 'Nouveau champ', new_field_path %>
 
 <table class="table table-hover">
   <thead>
     <tr>
       <th>Label</th>
-      <th>Parent</th>
-      <th colspan="3"></th>
     </tr>
   </thead>
 
   <tbody>
     <% @fields.each do |field| %>
       <tr>
-        <td><%= field.label %></td>
-        <td><%= field.parent_id %></td>
-        <td><%= link_to 'Show', field %></td>
-        <td><%= link_to 'Edit', edit_field_path(field) %></td>
-        <td><%= link_to 'Destroy', field, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to field, field %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
-
-<br>
-
-<%= link_to 'New Field', new_field_path %>
