--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,4 +1,9 @@
 <%= semantic_form_for @user do |f| %>
-  <%= f.inputs %>
+  <%= f.inputs do %>
+    <%= f.input :first_name %>
+    <%= f.input :last_name %>
+    <%= f.input :hours %>
+    <%= f.input :tenured, label: 'Titulaire' %>
+  <% end %>
   <%= f.actions %>
 <% end %>
