--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Equipe</h1>
+<h1><%= @users.count %> personnes</h1>
 <%= link_to 'Nouvelle personne', new_user_path %>
 
 <table class="table table-hover">
