--- a/app/assets/stylesheets/style.sass
+++ b/app/assets/stylesheets/style.sass
@@ -1,2 +1,10 @@
 body
   padding-top: 110px
+
+ul 
+  list-style-type: none
+  list-style-position: inside
+  padding-left: 0
+
+.abstract 
+  background: #eee
