--- a/app/views/teaching_modules/_form.html.erb
+++ b/app/views/teaching_modules/_form.html.erb
@@ -1,65 +1,7 @@
-<%= form_for(@teaching_module) do |f| %>
-  <% if @teaching_module.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@teaching_module.errors.count, "error") %> prohibited this teaching_module from being saved:</h2>
-
-      <ul>
-      <% @teaching_module.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
+<%= semantic_form_for @teaching_module do |f| %>
+  <%= f.inputs do %>
+    <%= f.input :fields, as: :check_boxes %>
   <% end %>
-
-  <div class="field">
-    <%= f.label :code %><br>
-    <%= f.text_field :code %>
-  </div>
-  <div class="field">
-    <%= f.label :label %><br>
-    <%= f.text_field :label %>
-  </div>
-  <div class="field">
-    <%= f.label :objectives %><br>
-    <%= f.text_area :objectives %>
-  </div>
-  <div class="field">
-    <%= f.label :content %><br>
-    <%= f.text_area :content %>
-  </div>
-  <div class="field">
-    <%= f.label :how_to %><br>
-    <%= f.text_area :how_to %>
-  </div>
-  <div class="field">
-    <%= f.label :what_next %><br>
-    <%= f.text_area :what_next %>
-  </div>
-  <div class="field">
-    <%= f.label :hours %><br>
-    <%= f.number_field :hours %>
-  </div>
-  <div class="field">
-    <%= f.label :semester_id %><br>
-    <%= f.number_field :semester_id %>
-  </div>
-  <div class="field">
-    <%= f.label :teaching_subject_id %><br>
-    <%= f.number_field :teaching_subject_id %>
-  </div>
-  <div class="field">
-    <%= f.label :teaching_unit_id %><br>
-    <%= f.number_field :teaching_unit_id %>
-  </div>
-  <div class="field">
-    <%= f.label :teaching_category_id %><br>
-    <%= f.number_field :teaching_category_id %>
-  </div>
-  <div class="field">
-    <%= f.label :coefficient %><br>
-    <%= f.number_field :coefficient %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+  <%= f.actions %>
 <% end %>
+
