--- a/app/views/fields/index.html.erb
+++ b/app/views/fields/index.html.erb
@@ -7,6 +7,8 @@
   <thead>
     <tr>
       <th>Label</th>
+      <th>Modules</th>
+      <th>Projets</th>
     </tr>
   </thead>
 
@@ -14,6 +16,20 @@
     <% @fields.each do |field| %>
       <tr>
         <td><%= link_to field, field %></td>
+        <td>
+          <ul class="list-inline">
+            <% field.teaching_modules.each do |teaching_module| %>
+              <li><%= link_to teaching_module, teaching_module, class: 'btn btn-default btn-xs' %></li>
+            <% end %>
+          </ul>
+        </td>
+        <td>
+          <ul class="list-inline">
+            <% field.projects.each do |project| %>
+              <li><%= link_to project, project, class: 'btn btn-default btn-xs' %></li>
+            <% end %>
+          </ul>
+        </td>
       </tr>
     <% end %>
   </tbody>
