--- a/app/views/jobs/_form.html.erb
+++ b/app/views/jobs/_form.html.erb
@@ -1,7 +1,9 @@
-<%= semantic_form_for @project do |f| %>
+<%= semantic_form_for(@job) do |f| %>
+
   <%= f.inputs do %>
     <%= f.input :label %>
     <%= f.input :fields, as: :check_boxes, label: 'Champs' %>
   <% end %>
+  
   <%= f.actions %>
 <% end %>
