--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,7 +45,8 @@
           <ul class="nav navbar-nav navbar-right">
             <li><%= link_to 'Equipe', users_path %></li>
             <li><%= link_to 'Champs', fields_path %></li>
-            <li><%= link_to 'Projets', projects_path %></li>            
+            <li><%= link_to 'Projets', projects_path %></li>
+            <li><%= link_to 'Métiers', jobs_path %></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">PPN <span class="caret"></span></a>
               <ul class="dropdown-menu">
