--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,24 +1,27 @@
 <p id="notice"><%= notice %></p>
 
 <h1><%= @projects.count %> projets</h1>
+<%= link_to 'Nouveau projet', new_project_path %>
 
 <table class="table table-hover">
   <thead>
     <tr>
       <th>Label</th>
-      <th>Semester</th>
-      <th colspan="3"></th>
+      <th>Semestres</th>
+      <th>Champs</th>
+      <th>Modules</th>
+      <th>Personnes</th>
     </tr>
   </thead>
 
   <tbody>
     <% @projects.each do |project| %>
       <tr>
-        <td><%= project.label %></td>
-        <td><%= project.semester_id %></td>
-        <td><%= link_to 'Show', project %></td>
-        <td><%= link_to 'Edit', edit_project_path(project) %></td>
-        <td><%= link_to 'Destroy', project, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to project, project %></td>
+        <td></td>
+        <td><%= render partial: 'fields/inline_list', locals: {fields: project.fields} %></td>
+        <td></td>
+        <td></td>
       </tr>
     <% end %>
   </tbody>
@@ -26,4 +29,3 @@
 
 <br>
 
-<%= link_to 'New Project', new_project_path %>
