--- a/app/views/teaching_modules/index.html.erb
+++ b/app/views/teaching_modules/index.html.erb
@@ -21,20 +21,8 @@
           <%= link_to teaching_module.semester, teaching_module.semester %>, 
           <%= teaching_module.hours %> heures
         </td>
-        <td>
-          <ul class="list-inline">
-            <% teaching_module.fields.each do |field| %>
-              <li><%= link_to field, field, class: 'btn btn-primary btn-xs' %></li>
-            <% end %>
-          </ul>
-        </td>
-        <td>
-          <ul class="list-inline">
-            <% teaching_module.projects.each do |project| %>
-              <li><%= link_to project, project, class: 'btn btn-primary btn-xs' %></li>
-            <% end %>
-          </ul>
-        </td>
+        <td><%= render partial: 'fields/inline_list', locals: {fields: teaching_module.fields} %></td>
+        <td><%= render partial: 'projects/inline_list', locals: {projects: teaching_module.projects} %></td>
       </tr>
     <% end %>
   </tbody>
