--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -2,6 +2,7 @@
   <%= f.inputs do %>
     <%= f.input :label %>
     <%= f.input :fields, as: :check_boxes, label: 'Champs' %>
+    <%= f.input :semesters, as: :check_boxes, labe: 'Semestres' %>
   <% end %>
   <%= f.actions %>
 <% end %>
