fix fields children

--- a/app/views/fields/index.html.erb
+++ b/app/views/fields/index.html.erb
@@ -16,7 +16,7 @@
     <% @fields.each do |field| %>
       <tr>
         <td><%= link_to field, field %></td>
-        <td><%= render partial: 'teaching_modules/inline_list', locals: {teaching_modules: field.teaching_modules} %></td>
+        <td><%= render partial: 'teaching_modules/inline_list', locals: {teaching_modules: field.teaching_modules_including_children} %></td>
         <td><%= render partial: 'projects/inline_list', locals: {projects: field.projects} %></td>
         <td><%= field.hours %></td>
       </tr>
