--- a/app/views/fields/_form.html.erb
+++ b/app/views/fields/_form.html.erb
@@ -1,6 +1,7 @@
 <%= semantic_form_for @field do |f| %>
   <%= f.inputs do %>
     <%= f.input :label %>
+    <%= f.input :color %>
     <%= f.input :parent %>
     <%= f.input :position %>
     <%= f.input :teaching_modules, as: :check_boxes %>
