--- a/app/views/teaching_modules/index.html.erb
+++ b/app/views/teaching_modules/index.html.erb
@@ -23,6 +23,7 @@
         </td>
         <td><%= render partial: 'fields/inline_list', locals: {fields: teaching_module.fields} %></td>
         <td><%= render partial: 'projects/inline_list', locals: {projects: teaching_module.projects} %></td>
+        <td><small><%= teaching_module.keywords.map{|k|k.label}.join(', ') %></small></td>
       </tr>
     <% end %>
   </tbody>
