--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,13 +40,12 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">MMI Bordeaux</a>
+        <a class="navbar-brand" href="/">MMI Bordeaux</a>
         <div class="navbar-collapse collapse navbar-responsive-collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><%= link_to 'Equipe', users_path %></li>
             <li><%= link_to 'Champs', fields_path %></li>
             <li><%= link_to 'Projets', projects_path %></li>
-            <li><%= link_to 'Métiers', jobs_path %></li>
+            <li><%= link_to 'Equipe', users_path %></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">PPN <span class="caret"></span></a>
               <ul class="dropdown-menu">
