--- a/app/views/fields/_table.html.erb
+++ b/app/views/fields/_table.html.erb
@@ -1,10 +1,3 @@
-<p id="notice"><%= notice %></p>
-
-<div id="vis"></div>
-
-<h1><%= @fields.count %> champs</h1>
-
-<%= link_to 'Nouveau champ', new_field_path %>
 <table class="table table-hover">
   <thead>
     <tr>
@@ -15,7 +8,7 @@
     </tr>
   </thead>
   <tbody>
-    <% @fields.each do |field| %>
+    <% fields.each do |field| %>
       <tr>
         <td><%= link_to field, field %></td>
         <td><%= render partial: 'projects/inline_list', locals: {projects: field.projects} %></td>
