--- a/app/views/teaching_modules/show.html.erb
+++ b/app/views/teaching_modules/show.html.erb
@@ -1,46 +1,4 @@
-<p id="notice"><%= notice %></p>
-
 <h1><%= @teaching_module.full_name %></h1>
 <%= link_to 'Edit', edit_teaching_module_path(@teaching_module) %>
 
-<div class="row">
-  <div class="col-md-8">
-    <h2>Contenus</h2>
-    <p><%= @teaching_module.content %></p>
-  </div>
-  <div class="col-md-4 abstract">
-    <h2>En bref</h2>
-    <ul>
-      <li><%= link_to @teaching_module.teaching_unit, @teaching_module.teaching_unit %></li>
-      <li><%= link_to @teaching_module.semester, @teaching_module.semester %></li>
-      <li><%= link_to @teaching_module.teaching_category, @teaching_module.teaching_category %></li>
-      <li><%= link_to @teaching_module.teaching_subject, @teaching_module.teaching_subject %></li>
-      <li><%= @teaching_module.hours %> heures</li>
-      <li>Coefficient <%= @teaching_module.coefficient %></li>
-    </ul>
-  </div>
-</div>
-
-<h2>Objectifs</h2>
-<p>
-  <ul>
-    <% @teaching_module.objectives.each do |objective| %>
-      <li><%= link_to objective, objective %></li>
-    <% end %>
-  </ul>
-</p>
-
-<h2>Modalités de mise en œuvre</h2>
-<p><%= @teaching_module.how_to %></p>
-
-<h2>Prolongements possibles</h2>
-<p><%= @teaching_module.what_next %></p>
-
-<h2>Mots-clés</h2>
-<%= render partial: 'keywords/inline_list', locals: {keywords: @teaching_module.keywords} %>
-
-<h2>Champs</h2>
-<%= render partial: 'fields/inline_list', locals: {fields: @teaching_module.fields} %>
-
-<h2>Projets</h2>
-<%= render partial: 'projects/inline_list', locals: {projects: @teaching_module.projects} %>
+<%= render 'show' %>
