--- a/app/views/teaching_modules/_form.html.erb
+++ b/app/views/teaching_modules/_form.html.erb
@@ -1,6 +1,7 @@
 <%= semantic_form_for @teaching_module do |f| %>
   <%= f.inputs do %>
-    <%= f.input :fields, as: :check_boxes, collection: Field.not_root %>
+    <%= f.input :user, label: 'Responsable' %>
+    <%= f.input :fields, as: :check_boxes, collection: Field.not_root, label: 'Champs' %>
   <% end %>
   <%= f.actions %>
 <% end %>
