--- a/app/assets/stylesheets/style.sass
+++ b/app/assets/stylesheets/style.sass
@@ -1,6 +1,3 @@
-body
-  padding-top: 110px
-
 ul 
   list-style-type: none
   list-style-position: inside
@@ -14,4 +11,8 @@ ul
   width: 660px
   height: 660px
   margin: 0 auto
-  
+
+.logo img
+  margin-top: -35px
+  margin-left: -25px
+  height: 90px
